Revision history for {{$dist->name}}

{{$NEXT}}

0.25      2019-06-25 12:27:58 -0400
  - Add support for Alien::Base with alien option (gh#18)

0.24      2019-04-27 09:14:34 -0400
  - Add try_linker_script option (gh#13, gh#15)

0.23      2018-11-18 00:07:49 -0500
  - Handle DLLs on Windows with "dashed" version numbers (example: foo-1-2-3.dll)
    (gh#10, gh#11, SLAFFAN++)

0.22      2018-10-13 22:24:46 -0400
  - Production version identical to 0.21_01

0.21_01   2018-10-11 22:53:43 -0400
  - Documentation fixes
  - Handle DLLs with upper-case characters in extension on MSWin32 (gh#9)

0.20      2018-06-04 18:18:09 -0400
  - Add system_path function.

0.19      2018-05-30 21:09:32 -0400
  - Administrative release to note that this dist is moving its
    repository to the Perl5-FFI org on github.com

0.18      2017-10-25 10:00:47 -0400
  - Production version identical to 0.17_02

0.17_02   2017-10-14 01:03:04 -0400
  - Fix Windows testing regression introduced in 0.17_01

0.17_01   2017-10-13 15:58:30 -0400
  - Filter out broken and recursive symlinks
  - Better handle symlinked .so files on platforms that support that.

    Previously, we preferred the longer .so names (ie, libfoo.so.1.2.3)
    over the shorter .so names (libfoo.so) since the latter is usually a
    symlink, and the former may have useful "version" information in the
    filename.  That is a problem when a system is using symlinks to indicate
    a preference, (for example, if there are both libfoo.so.1.2.3,
    libfoo.so.1.2.4 and libfoo.so is a symlink to one of those).
    
    Now we still endevour to return the long .so name, but use the short
    name to see which one is preferred by the operating system, or user.
    
    In the absense of any symlinks to disambiguate two libraries with the
    same name, we prefer the one with a newer version number.   That is
    libfoo.so.2.3.4 would be preferred over libfoo.so.1.2.3
   
  - Slightly more consistent diagnostic messages.